# SlicerLeapMotion

./: CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  SuperBuild.cmake
GestureRecognition/: CMakeLists.txt  qSlicerGestureRecognitionModule.cxx  qSlicerGestureRecognitionModule.h  qSlicerGestureRecognitionModuleWidget.cxx  qSlicerGestureRecognitionModuleWidget.h
GestureRecognition/Logic/: CMakeLists.txt  vtkSlicerGestureRecognitionLogic.cxx  vtkSlicerGestureRecognitionLogic.h
GestureRecognition/Resources/: anbcModel.grt  qSlicerGestureRecognitionModule.qrc
GestureRecognition/Resources/Models/: ANBCModel.grt  DecisionTreeModel.grt
GestureRecognition/Resources/UI/: qSlicerGestureRecognitionFooBarWidget.ui  qSlicerGestureRecognitionModuleWidget.ui
GestureRecognition/Widgets/: qSlicerGestureRecognitionFooBarWidget.cxx  qSlicerGestureRecognitionFooBarWidget.h
LeapCalibration/: CMakeLists.txt  qSlicerLeapCalibrationModuleWidget.cxx  qSlicerLeapCalibrationModuleWidget.h
LeapCalibration/Resources/UI/: qSlicerLeapCalibrationModuleWidget.ui
SuperBuild/: External_Swig.cmake  External_grt.cmake
